Operator bpy.ops.uv.pack_islands call leads to Blender crash #108171

Closed
opened 2023-05-23 11:22:17 +02:00 by Alexander Milovsky · 5 comments
First-time contributor

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 3.6.0 Beta, branch: blender-v3.6-release, commit date: 2023-05-22 21:38, hash: 43fe7bec4fa5
Worked: Blender 3.5.0 / 3.5.1

Caused by edc12436c6

Short description of error
Calling of operator bpy.ops.uv.pack_islands leads to Blender crash.

Exact steps for others to reproduce the error
Create new scene with default Cube then put this simple Python-code into the Console on the Scripting tab:

import bpy
obj = bpy.context.scene.objects['Cube']
bpy.ops.object.mode_set(mode='EDIT', toggle=False)
bpy.ops.uv.select_all(action='SELECT')
bpy.ops.uv.pack_islands(margin=0.01)  # This call will crash Blender 3.6 Beta
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 3.6.0 Beta, branch: blender-v3.6-release, commit date: 2023-05-22 21:38, hash: `43fe7bec4fa5` Worked: Blender 3.5.0 / 3.5.1 Caused by edc12436c66a **Short description of error** Calling of operator bpy.ops.uv.pack_islands leads to Blender crash. **Exact steps for others to reproduce the error** Create new scene with default Cube then put this simple Python-code into the Console on the Scripting tab: ```Py import bpy obj = bpy.context.scene.objects['Cube'] bpy.ops.object.mode_set(mode='EDIT', toggle=False) bpy.ops.uv.select_all(action='SELECT') bpy.ops.uv.pack_islands(margin=0.01) # This call will crash Blender 3.6 Beta ```
Alexander Milovsky added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-05-23 11:22:17 +02:00
Iliya Katueshenock added the
Interest
Modeling
Interest
Python API
Interest
UV Editing
labels 2023-05-23 11:25:34 +02:00
Iliya Katueshenock added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
Interest
Modeling
labels 2023-05-23 12:27:35 +02:00
Member

Will bisect.

Will bisect.
Member
Caused by edc12436c66a CC @ideasman42 CC @Chris_Blackbourn Fix in https://projects.blender.org/blender/blender/pulls/108185
Philipp Oeser added
Priority
High
and removed
Interest
Python API
Priority
Normal
labels 2023-05-23 14:10:16 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-24 11:57:31 +02:00
Author
First-time contributor

Warning! This bug still exists in Blender 3.6.0 Release Candidate (June 26, 03:05:53, 8fd824c4b7)

Warning! This bug still exists in Blender 3.6.0 Release Candidate (June 26, 03:05:53, 8fd824c4b70a)
Blender Bot added
Status
Needs Triage
and removed
Status
Resolved
labels 2023-06-26 14:36:19 +02:00
Member

Terribly sorry, not sure how that sneaked in, but yeah, it was actually the original fix that had a double free...

Stumbled upon another crash (pasting in the console with comments in the end, will report separately)

Terribly sorry, not sure how that sneaked in, but yeah, it was actually the original fix that had a double free... Stumbled upon another crash (pasting in the console with comments in the end, will report separately)
Jesse Yurkovich added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-06-27 02:57:03 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-27 08:55:45 +02:00
Member

The fix is in main, but also added to 3.6 LTS #109399, so should be in 3.6.1 once it is out

The fix is in main, but also added to 3.6 LTS #109399, so should be in 3.6.1 once it is out
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108171
No description provided.