Fix #108171: crash calling bpy.ops.uv.pack_islands

When the operator was executed directly (instead of being invoked as
from the UI), `stop`, `do_update` & `progress` were passed to the job
uninitialized, but `pack_islands_startjob` assigns to them (leading to
crash).

Also fix memleak (missing call to `pack_islands_freejob`).